index.html: page description updated
Signed-off-by: Rodolfo Giometti <giometti@linux.it>

--- a/index.html
+++ b/index.html
@@ -28,9 +28,24 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a name="cosinos-github-page" class="anchor" href="#cosinos-github-page"><span class="octicon octicon-link"></span></a>COSINO's github page</h1>
+<a name="cosinos-github-page" class="anchor" href="#cosinos-github-page"><span
+              class="octicon octicon-link"></span></a>COSINO's github page</h1>
 
-<p>Here you can find some binaries form Cosino's projects.</p>
+        <p><strong><em>Computer Oriented to Simplify Innovation of New Objects</em></strong></p>
+
+        <ul>
+          <li>Cosino is a flexible and versatile embedded system ready-to-use to
+            develop new embedded applications.</li>
+          <li>Cosino's software is open source, which means you can make it work
+            just the way you want it to.</li>
+          <li>Cosino's community can help newbies and skilled developers to
+            solve their problems.</li>
+          <li>Cosino is designed for industrial applications.</li>
+        </ul>
+
+        <p>This is the GitHub page where you can find some binaries form
+          Cosino's projects. Project's main site is at <a href="http://www.cosino.it">http://www.cosino.it</a></p>
+
       </section>
     </div>
 
