index.html: add Cosino's logo
Signed-off-by: Rodolfo Giometti <giometti@linux.it>

--- a/index.html
+++ b/index.html
@@ -18,8 +18,22 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/cosino">View on GitHub</a>
 
-          <h1 id="project_title">Cosino</h1>
-          <h2 id="project_tagline">COSINO's github page</h2>
+          <table width="100%" style="border:0">
+            <tr>
+              <td rowspan="2" style="vertical-align:middle; border:0">
+                <img src="images/logo.png" alt="Cosino's logo" width="10">
+              </td>
+              <td rowspan="2" width="15%" style="border:0">
+              <td style="border:0">
+                <h1 id="project_title">Cosino</h1>
+              </td>
+            </tr>
+            <tr>
+              <td style="border:0">
+                <h2 id="project_tagline">COSINO's github page</h2>
+              </td>
+            </tr>
+          </table>
 
         </header>
     </div>
