index.html: motto updated
Signed-off-by: Rodolfo Giometti <giometti@linux.it>

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </tr>
             <tr>
               <td style="border:0">
-                <h2 id="project_tagline">COSINO's github page</h2>
+                <h2 id="project_tagline">The quick prototyping embedded system</h2>
               </td>
             </tr>
           </table>
